force-app/main/default/objects/Proof_of_Delivery__c/Proof_of_Delivery__c.object-meta.xml
<CustomObject>
    <label>Proof of Delivery</label>
    <nameField>
        <label>Proof of Delivery ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof of Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>