force-app/main/default/objects/Proof_of_Delivery__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Proof of Deliveries</relationshipLabel>
    <relationshipName>Proof_of_Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>