force-app/main/default/objects/Proof_of_Delivery__c/fields/POD_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>POD_Received_Date__c</fullName>
    <label>POD Received Date</label>
    <type>DateTime</type>
</CustomField>