force-app/main/default/objects/Proof_of_Delivery__c/fields/QC_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Status__c</fullName>
    <label>QC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>