force-app/main/default/objects/Proof_of_Delivery__c/fields/SignatureXString__c.field-meta.xml
<CustomField>
    <fullName>SignatureXString__c</fullName>
    <description>Text field to be used for signature - StarTrack</description>
    <label>Signature XString</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>