force-app/main/default/objects/Proof_of_Delivery__c/fields/Signed_by__c.field-meta.xml
<CustomField>
    <fullName>Signed_by__c</fullName>
    <label>Signed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>